--- a/Mission_to_Mars/app/templates/index.html
+++ b/Mission_to_Mars/app/templates/index.html
@@ -25,8 +25,8 @@
           <div class="margin-top-10px">
             <div class="text-box">
               <h2>Latest Mars News</h2>
-              <h3>{{ data.news_title }}</h3>
-              <p>{{ data.news_paragraph }}</p>
+              <h3>{{ mars_data.title }}</h3>
+              <p>{{ mars_data.paragraph }}</p>
             </div>
           </div>
         </div>
@@ -39,7 +39,7 @@
 
           <!-- if images is False/None/non-existent, then default to error message -->
           <img
-            src="{{data.featured_image | default('static/images/error.png', true) }}"
+            src="{{mars_data.featured_img | default('static/images/error.png', true) }}"
             class="img-responsive"
             alt="Responsive image"
           />
@@ -49,7 +49,7 @@
           <!-- Mars Facts -->
           <div class="row" id="mars-facts">
             <h4>Mars Facts</h4>
-            <table class ="table table-bordered">{{ mars.df | safe }}</table>
+            <table class ="table table-bordered">{{ mars_data.mars_facts | safe }}</table>
           </div>
         </div>
       </div>
@@ -60,12 +60,12 @@
           <h2 class="text-center">Mars Hemispheres</h2>
         </div>
 
-        {% for hemisphere in mars.hemispheres %}
+        {% for hemi in mars_data.hemisphere %}
         <div class="col-md-3">
           <div class="thumbnail">
-            <img src="{{hemisphere.img_url | default('static/images/error.png', true)}}" alt="...">
+            <img src="{{mars_data.hemisphere | default('static/images/error.png', true)}}" alt="...">
             <div class="caption">
-              <h3>{{hemisphere.title}}</h3>
+              <h3>{{mars_data.title}}</h3>
             </div>
           </div>
         </div>
